<resources>
    <string name="application_name">Lendr</string>
    <string name="item_details_item_name">Item name</string>
    <string name="item_details_item_category">Item category</string>
    <string name="item_details_open_lends">Open lends</string>
    <string name="placeholder">placeholder</string>
    <string name="category_sort_name">Sort by name</string>
    <string name="category_menu_edit">Edit</string>
    <string name="category_menu_delete">Delete</string>
    <string name="category_list_items_in">items in this category</string>
    <string name="new_category_name">Category name</string>
    <string name="new_category_parent">Set parent category:</string>
    <string name="new_item_name">Item name</string>
    <string name="new_item_description">Item description</string>
    <string name="new_item_category">Item category</string>
    <string name="new_lend_item">Item to lend</string>
    <string name="new_lend_start">Start date</string>
    <string name="new_lend_end">End date</string>
    <string name="new_lend_lendee">Lendee name</string>
    <string name="item_details_add_image">Add image</string>
    <string name="item_details_add_lend">Add lend</string>
    <string name="item_details_edit_item">Edit item</string>
    <string name="item_details_delete_item">Delete item</string>
    <string name="item_menu_sort">Sort by ...</string>
    <string name="item_menu_name">Name</string>
    <string name="item_menu_category">Category</string>
    <string name="lend_click_menu_delete">Delete</string>
    <string name="lend_list_lendee">Lendee</string>
    <string name="lend_list_item">Item</string>
    <string name="lend_list_start">Start</string>
    <string name="lend_list_end">End</string>
    <string name="lend_list_closed">Closed</string>
    <string name="item_list_image">Item image</string>
    <string name="lend_menu_sort">Sort by ...</string>
    <string name="lend_menu_item">Item</string>
    <string name="lend_menu_lendee">Lendee</string>
    <string name="lend_menu_start">Start date</string>
    <string name="lend_menu_end">End date</string>
    <string name="lend_menu_delete_closed">Delete closed lends</string>
    <string name="item_details_closed">Closed lends</string>
    <string name="category_adapter_delete">Delete category</string>
    <string name="category_adapter_delete_msg">Do you really want to delete this category?</string>
    <string name="category_delete_error_items">Can\'t delete this category because it has items assigned to it.</string>
    <string name="category_delete_error_child">Can\'t delete this category because it has child categories.</string>
    <string name="category_delete_error">Can\'t delete category</string>
    <string name="image_preview_title">Image preview</string>
    <string name="item_details_toomanyphotos">An item can only store 4 photos.</string>
    <string name="item_details_delete_title">Delete item</string>
    <string name="item_details_delete_msg">Do you really want to delete this item?</string>
    <string name="item_details_delete_lends">Lends on this item will also be deleted. Do you want to continue?</string>
    <string name="item_details_item_deleted">%1$s deleted</string>
    <string name="delete_lend_title">Delete lend</string>
    <string name="delete_lend_msg">Do you really want to delete this lend?</string>
    <string name="delete_closed_lend_title">Delete closed lends</string>
    <string name="delete_closed_lend_msg">Do you really want to delete all closed lends?</string>
    <string name="new_category_name_empty">Name can\'t be empty</string>
    <string name="new_category_name_duplicate">A category with the same name already exists.</string>
    <string name="new_category_title">Add new Category</string>
    <string name="new_category_parent_error">Can\'t add Parent because there are no categories.</string>
    <string name="new_item_name_empty">Name can\'t be empty</string>
    <string name="new_item_name_duplicate">An Item with the same name already exists.</string>
    <string name="new_item_title">Add new Item</string>
    <string name="new_lend_lendee_empty">Lendee name cannot be empty</string>
    <string name="new_lend_start_empty">Starting date cannot be empty</string>
    <string name="new_lend_end_empty">End date cannot be empty</string>
    <string name="new_lend_date_preceed">End date cannot preceed the start date</string>
    <string name="new_lend_conflict_title">Conflicting Lend intervals</string>
    <string name="new_lend_conflict_msg">There\'s already a lend on this item with an overlapping time interval.</string>
    <string name="new_lend_title">Add new Lend</string>
    <string name="new_lend_parse_error">An error occurred while parsing input data.</string>
    <string name="pager_items">Items</string>
    <string name="pager_categories">Categories</string>
    <string name="pager_lends">Lends</string>
    <string name="no_category_error">There are no categories so you can\'t add new items.</string>
</resources>
