<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_lend_item"/>

    <Spinner
        android:id="@+id/LendrItemSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_lend_start"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/StartDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_lend_end"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/EndDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_marginTop="16dp"
        android:id="@+id/LendeeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_lend_lendee"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="Item name"
        />

</LinearLayout>